_azure/_aks_artifacts/yaml/policy/allow_nginx_product.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-nginx-product
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: product
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginxpod
