_azure/_aks_artifacts/yaml/policy/blockall_productpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: blockallpolicy
  namespace: app
spec:
  podSelector:
    matchLabels:
      group: application          
  ingress: []
