_azure/_aks_artifacts/yaml/policy/productpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: product-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: product      
  ingress: []
